Move type and builder logic from the builder producer into symbols
This will allow symbol decorators to fully change how this is codegen
and what types it uses, for instance, it could use bare java types
instead of the builder references.